# routes/api.php
@@ -27,6 +27,7 @@ Route::prefix('auth')->group(function () {
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('offices', OfficeController::class);
+    Route::post('attendances/{attendance}/checkout', [AttendanceController::class, 'checkout'])->name('attendances.checkout');
     Route::apiResource('attendances', AttendanceController::class);
     Route::get('users', [UserController::class, 'index'])->name('users.index');
     Route::get('users/{user}', [UserController::class, 'show'])->name('users.show');
